# data_for_ML_course

./: .env.example  .gitignore  CLAUDE.md  README.md  VIDEO_SCRIPT.md  config_annotation.yaml  pyproject.toml  run_pipeline.py
.claude/agents/: annotation-agent.md  data-quality.md  dataset-searcher.md
.claude/commands/: find-datasets.md  pipeline.md
agents/: al-agent.md  al_agent.py  annotation-agent.md  annotation_agent.py  data-quality.md  data_collection_agent.py  data_quality_agent.py  dataset-searcher.md
notebooks/: al_experiment.ipynb  annotation_eda.ipynb
reports/: al_report.md  annotation_report.md  quality_report.md
scripts/: convert_kaggle_news.py
scripts/collect/: download_sst5.py
scripts/quality/: compare.py  detect_outliers.py  explain.py  fix_duplicates.py  fix_imbalance.py  fix_missing.py  profile.py
scripts/quality/tabular/: detect_duplicates.py  detect_imbalance.py  detect_missing.py  fix_outliers.py
scripts/quality/text/: detect_quality.py
scripts/quality/vision/: detect_corrupt.py  hash_duplicates.py
scripts/search/: check_env.py  google_search.py  hf_bulk_search.py  huggingface_search.py  kaggle_bulk_search.py  kaggle_search.py  merge_final.py  merge_results.py  run_wave.py  semantic_filter.py  update_seen_ids.py  verify_samples.py
skills/: active_learning.md  auto_label.md  check_quality.md  data_pipeline.md  dataset_search.md  detect_issues.md  export_labelstudio.md  fetch_api.md  fix_data.md  merge_sources.md  scrape.md
